--- a/rosatvm/contact.html
+++ b/rosatvm/contact.html
@@ -423,7 +423,7 @@ Address </span>
 </a>
 </h4>
 <p class="qodef-m-text" style="color: #1e7862">Rosa Flower Shop<br>
-	CB37,New Saphalyam Complex,Palayan<br>Trivandrum-34</p>
+	CB37,New Saphalyam Complex,Palayam<br>Trivandrum-34</p>
 </div>
 </div> </div>
 </div>
