--- a/rosatvm/portfolio.html
+++ b/rosatvm/portfolio.html
@@ -1311,7 +1311,7 @@
     <div id="nav_menu-3" class="widget widget_nav_menu" data-area="footer_top_area_column_3"><h5 class="qodef-widget-title">Contact</h5>
         <div class="menu-footer-menu-2-container">
         	<h5 style="font-size: 20px;font-family: Crimson Text,serif;     font-style: italic;
-		letter-spacing: .02em;">Rosa Flower Shop<br>CB37,New Saphalyam Complex,Palayan<br>Trivandrum-34</h5>
+		letter-spacing: .02em;">Rosa Flower Shop<br>CB37,New Saphalyam Complex,Palayam<br>Trivandrum-34</h5>
     </div></div> </div>
     <div class="qodef-grid-item qodef-col--2">
     <div id="text-5" class="widget widget_text" data-area="footer_top_area_column_4"><h5 class="qodef-widget-title">Follow Us</h5> <div class="textwidget"></div>
